# dev

./: .env.example  .gitignore  .vibe-docker.yml  Dockerfile  LICENSE  Makefile  README.md  clean-repo.sh  deploy.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: blank.yml.disabled  ci-cd.yml  ci.yml.disabled  docker-publish.yml  docker-push.yml  vibe-ci.yml
_backup_20260714_050220/: CONTRIBUTING.md
config/: layer_0_infra.json  layer_1_data.json  layer_2_logic.json  layer_3_api.json  layer_4_integration.json  security.json
docs/: ARCHITECTURE.md
scripts/: healthcheck.sh  provision.sh  quick-test.sh  rollback.sh  rollback_full.sh
src/: config_loader.py  index.js
src/layer_0/: resource.py
src/layer_2/: __init__.py  logic.py
src/layer_3/: api.py
src/layer_4/: dispatch.py
src/layer_5/: backup.py  orchestrator.py
src/observability/: exporter.py
src/policy_gateway/: __init__.py  app.py  audit.py  config.py  data.py  dispatch.py  infra.py  logic.py  main.py  models.py
src/policy_gateway/static/: app.js  index.html  styles.css
tests/: test_gateway.py
