[project]
name = "policy-gateway"
version = "0.2.0"
description = "Production-oriented FastAPI policy gateway with SQLite WAL settlement, dispatch, audit, metrics, and rollback support."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.3,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "build>=1.2,<2",
]

[project.scripts]
policy-gateway = "policy_gateway.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config_loader"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
policy_gateway = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
